// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballSummary should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa kzAIuV"
  >
    <div
      class="sc-htpNat sc-bxivhb euRRnO"
    />
    <div
      class="sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballSummary should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa kzAIuV"
  >
    <div
      class="sc-htpNat sc-bxivhb euRRnO"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
